[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PHPlus"
version = "0.0.1"
description = "Absolutni Sracka"
authors = [
    { name = "Filip Jurkenik", email = "jurkefi24@sps-prosek.cz" }
]
dependencies = ["phplus_rust"]
requires-python = ">=3.8"

[project.scripts]
phplus = "compiler:main"

[tool.uv.sources]
phplus_rust = { path = "rust/target/wheels/phplus_rust-0.1.0-cp314-cp314-win_amd64.whl" }

[tool.setuptools]
py-modules = ["compiler"]